# roundedcorners

./: Main.vala  README.md  Settings.vala  meson.build  patch.sh
diffs/: WindowManager.vala.diff  meson.build.diff  org.pantheon.desktop.gala.gschema.xml.in.diff
shaders/: BorderedCornerEffect.frag  BorderlessCornerEffect.frag  CornerEffect.frag
